<resources>
    <string name="app_name">Christian Community</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_publication_title">Publication</string>
    <string name="username_textView">Username</string>
    <string name="username_hint">Enter your username</string>
    <string name="password_textview">Password</string>
    <string name="password_hint">Enter your password</string>
    <string name="login_button">Login</string>
    <string name="image_perfil_description">This is perfil image</string>
    <string name="icon_like">Icon Like</string>
    <string name="hint_tittle_npublication">Title</string>
    <string name="hint_description_npublication">Description</string>
    <string name="button_cancel">cancelar</string>
    <string name="button_save">Aceptar</string>
    <string name="hint_date">Date</string>
    <string name="icon_new_publication">Icon new publication</string>
    <string name="fecha_example">10-12-2016</string>
    <string name="edit_text_new_publication">New Publication</string>
    <string name="hint_place">Place</string>
    <string name="menu_item_logout">Logout</string>
    <string name="hint_password_npublication">Password</string>
    <string name="content_image_login">Image Login</string>
</resources>
