<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="ccomunities.alashka.com.ccommunities_dev.NewPublicationActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/MyMaterialTheme">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/MyMaterialTheme" />

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textAlignment="center"
           android:textSize="20sp"
           android:textStyle="bold"
           android:textColor="@color/colorTextIcons"
           android:text="@string/edit_text_new_publication"/>

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/area_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="false"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_view_tittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/icon_title"
                android:contentDescription="@string/icon_new_publication"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/label_title_npublication"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp">

                <EditText
                    android:id="@+id/edit_text_tittle_npublication"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_tittle_npublication"
                    android:inputType="text"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/area_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/area_title"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/icon_title"
                android:contentDescription="@string/icon_new_publication"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/label_description_npublication"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp">

                <EditText
                    android:id="@+id/edit_text_description_npublication"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_description_npublication"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/area_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/area_description"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/icon_calendar"
                android:contentDescription="@string/icon_new_publication"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/label_date_npublication"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp">

                <EditText
                    android:id="@+id/edit_text_date_npublication"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_date"
                    android:inputType="date"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/area_place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/area_date"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_place"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/icon_map"
                android:contentDescription="@string/icon_new_publication"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/label_place_npublication"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp">

                <EditText
                    android:id="@+id/edit_text_place_npublication"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_place"
                    android:inputType="text"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/bottom_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentBottom="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_cancel_publication"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_cancel"
                android:textColor="@color/colorAccent"
                android:backgroundTint="@color/colorAccent"
                android:onClick="cancelPublication"/>

            <Button
                android:id="@+id/button_save_publication"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/button_save"
                android:textColor="@color/colorTextIcons"
                android:onClick="savePublication" />
        </LinearLayout>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
