<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="210dp"
    card_view:cardCornerRadius="8dp"
    card_view:cardElevation="6dp"
    card_view:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <ImageView
            android:id="@+id/image_user"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/image_men_perfil"
            android:layout_margin="10dp"
            android:contentDescription="@string/image_perfil_description"/>

        <TextView
            android:id="@+id/title_publication"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_toEndOf="@+id/image_user"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:textColor="@color/colorPrimaryDark"/>
        <TextView
            android:id="@+id/date_publication"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/fecha_example"
            android:layout_below="@+id/title_publication"
            android:layout_alignStart="@+id/title_publication" />

        <TextView
            android:id="@+id/description_publication"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_below="@+id/image_user"
            android:layout_alignStart="@+id/image_user" />
        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#ffd5d5d5"
            android:id="@+id/linea"
            android:layout_above="@+id/like_publication">

        </View>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:id="@+id/like_publication"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:src="@mipmap/icon_like"
            android:contentDescription="@string/icon_like"/>
    </RelativeLayout>

</android.support.v7.widget.CardView>